[package]
name = "fenwick"
version = "1.0.0"
edition = "2018"
authors = ["summivox <summivox@gmail.com>"]

description = "Fenwick tree: data structure that efficiently calculates prefix sums in a changing array of numbers."
repository = "https://github.com/summivox/fenwick.rs"
readme = "README"
keywords = ["binary", "tree", "array", "prefix", "sum"]
categories = ["algorithms", "data-structures", "science"]
license = "MIT"

[dependencies]

[dev-dependencies]
rand = "0.5.0-pre.0"
