[package]
name = "fenwick"
version = "2.0.0"
edition = "2021"
authors = ["summivox <summivox@gmail.com>"]

description = "Fenwick tree: data structure that efficiently calculates prefix sums in a changing array of numbers."
repository = "https://github.com/summivox/fenwick.rs"
keywords = ["binary", "tree", "array", "prefix", "sum"]
categories = ["algorithms", "data-structures", "science"]
license = "MIT"

[dependencies]

[dev-dependencies]
itertools = "0.10.4"
rand = "0.8.5"
